<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
    android:layout_width="match_parent">

    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_hw103"
    tools:context=".Hw103Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitleApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/textTitleApp"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textTitleHw02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textHw03"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="501dp">

                <TextView
                    android:id="@+id/A1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_above="@+id/A2"
                    android:layout_marginBottom="0dp"
                    android:background="#7CE495"
                    android:gravity="center"
                    android:text="@string/textA1"
                    android:textColor="#fff"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/A2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_above="@+id/A3"
                    android:layout_marginBottom="0dp"
                    android:background="#55C595"
                    android:gravity="center"
                    android:text="@string/textA2"
                    android:textColor="#fff"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/A3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_above="@+id/A4"
                    android:layout_marginBottom="97dp"
                    android:background="#359D9E"
                    android:gravity="center"
                    android:text="@string/textA3"
                    android:textColor="#fff"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/A4"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="0dp"
                    android:background="#215273"
                    android:gravity="center"
                    android:text="@string/textA4"
                    android:textColor="#fff"
                    android:textSize="30sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backHw1021"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="94dp"
                    android:layout_weight="1"
                    android:text="@string/textHw02"
                    android:background="@drawable/btn_hw1"
                    android:textColor="@color/whiteColor"
                    android:textStyle="bold"
                    tools:ignore="OnClick"/>

                <Button
                    android:id="@+id/nextHw1041"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textHw04"
                    android:background="@drawable/btn_hw1"
                    android:textColor="@color/whiteColor"
                    android:textStyle="bold"
                    tools:ignore="OnClick"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>

</androidx.drawerlayout.widget.DrawerLayout>