<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/imgHome"
        android:layout_width="266dp"
        android:layout_height="367dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="73dp"
        android:background="@drawable/logo_2"
        android:contentDescription="@string/textDesLogo"
        android:onClick="go"
        tools:ignore="OnClick" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/imgHome">

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textUsernameShow"
            android:textAlignment="center"
            android:textSize="30sp"
            android:paddingLeft="30dp"
            android:textColor="#E9779E"
            android:layout_below="@+id/textHi"
            android:layout_alignStart="@+id/textHi"
            />

        <TextView
            android:id="@+id/textHi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textHi"
            android:textAlignment="center"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:textColor="#EC0756"
            android:layout_alignStart="@+id/textHi"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="#E9779E"
            android:layout_below="@+id/textMypassword"
            android:layout_alignStart="@+id/textHi"
            android:paddingLeft="30dp"
            android:text="@string/textPassword" />

        <TextView
            android:id="@+id/textMypassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_below="@+id/textUsername"
            android:layout_alignStart="@+id/textHi"
            android:textColor="#FF0057"
            android:textSize="40sp"
            android:text="@string/textMypassword" />
    </RelativeLayout>

</RelativeLayout>