<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".workFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textTitleMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="80sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_hw1"
                android:textColor="@color/whiteColor"
                />

            <Button
                android:id="@+id/menuHw101"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textTitleMenu"
                android:layout_alignParentStart="true"
                android:layout_marginStart="44dp"
                android:layout_marginTop="53dp"
                android:background="@drawable/btn_hw1"
                android:padding="10dp"
                android:text="@string/textHw01"
                android:textColor="@color/whiteColor"
                android:textStyle="bold" />

            <Button
                android:id="@+id/menuHw102"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textTitleMenu"
                android:layout_marginStart="52dp"
                android:layout_marginTop="53dp"
                android:layout_toEndOf="@+id/menuHw101"
                android:background="@drawable/btn_hw1"
                android:padding="10dp"
                android:text="@string/textHw02"
                android:textColor="@color/whiteColor"
                android:textStyle="bold" />

            <Button
                android:id="@+id/menuHw103"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/menuHw101"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_hw1"
                android:layout_alignStart="@+id/menuHw101"
                android:padding="10dp"
                android:text="@string/textHw03"
                android:textColor="@color/whiteColor"
                android:textStyle="bold" />

            <Button
                android:id="@+id/menuHw104"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/menuHw102"
                android:background="@drawable/btn_hw1"
                android:padding="10dp"
                android:layout_marginTop="40dp"
                android:text="@string/textHw04"
                android:layout_below="@+id/menuHw101"
                android:textColor="@color/whiteColor"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>