<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg2">

    <include
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        layout="@layout/app_bar_name"
        />

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:background="@color/whiteColor"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/header"
        android:layout_gravity="start"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="103dp"
        android:background="@drawable/bear"
        android:contentDescription="@string/textDesLogo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="50dp"
        android:drawableStart="@drawable/img_username"
        android:ems="20"
        android:hint="@string/textUsername"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@+id/login"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:drawableStart="@drawable/img_password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/textPassword"
        android:labelFor="@+id/login"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_login"
        android:onClick="login"
        android:text="@string/textLogin"
        android:textColor="#ffff"
        android:textSize="30sp" />

</androidx.drawerlayout.widget.DrawerLayout>
