<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
    android:layout_width="match_parent">

    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_hw102"
    tools:context=".Hw102Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitleApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/textTitleApp"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textTitleHw02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textTitleHw02"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.4"
                android:background="#0057A8"
                android:padding="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.4"
                android:background="#0068B2"
                android:padding="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.1"
                android:background="#1082BD"
                android:padding="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:background="#6FA8C8"
                android:padding="16dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backHw1011"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="94dp"
                android:layout_weight="1"
                android:text="@string/textHw01"
                android:background="@drawable/btn_hw1"
                android:textColor="@color/whiteColor"
                android:textStyle="bold"
                tools:ignore="OnClick"/>

            <Button
                android:id="@+id/nextHw1031"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textHw03"
                android:background="@drawable/btn_hw1"
                android:textColor="@color/whiteColor"
                android:textStyle="bold"
                tools:ignore="OnClick"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>

</androidx.drawerlayout.widget.DrawerLayout>