<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_hw101"
        tools:context=".Hw101Fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitleApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/textTitleApp"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/textHw01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textHw01"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/box" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/box" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/box" />


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/nextHw1021"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="250dp"
                    android:background="@drawable/btn_hw1"
                    android:textColor="@color/whiteColor"
                    android:textStyle="bold"
                    android:text="@string/textHw02"
                    tools:ignore="OnClick" />

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>
</androidx.drawerlayout.widget.DrawerLayout>